--- a/U1/P2Ej1b.html
+++ b/U1/P2Ej1b.html
@@ -5,7 +5,7 @@
     <title>Ejercicio 1</title>
   </head>
   <body>
-    <p onclick="alert('Alerta de parrafo')">Este texto tiene una alerta.>
+    <p onclick="alert('Alerta de parrafo')">
       Este texto tiene alerta
     </p>
     <p>
