--- a/U2/U2Ex2.html
+++ b/U2/U2Ex2.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>U2. Ejercicio 1</title>
+    <script type="text/javascript">
+      alert("La profesora dijo literalmente: \"Javascript es muy 'divertido' y muy 'fácil' de aprender\"");
+      </script>
   </head>
   <body>
-
+    <h1>Esto es un título</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
   </body>
 </html>
