--- a/U2/U2Ex14.html
+++ b/U2/U2Ex14.html
@@ -17,9 +17,9 @@
     function saludaEdad (a) {
       var edad = calculaEdad(a);
       if (0<edad && edad<=18) {
-        return "Hey";
+        return "Hey! menor de edad";
       } else if (18<edad && edad<=40) {
-        return "Hola";
+        return "Hola!";
       } else {
         return "Buenos días";
       }
