--- a/U2/U2Ex15.html
+++ b/U2/U2Ex15.html
@@ -21,7 +21,7 @@
             if (isNaN(dia)) {
               document.write ("Error, no es un número");
             } else {
-              document.write ("Hoy es " + diasSemana[dia]);
+              document.write ("Hoy es " + diasSemana[dia-1]);
             }
           }
         }
