--- a/U2/U2Ex9.html
+++ b/U2/U2Ex9.html
@@ -8,10 +8,10 @@
 			<script>
 				var d = new Date();
 				var n = d.getFullYear();
-				
-				var año = prompt ("¿Año de nacimiento?")
-				
-				if (n-año >= 18) {
+
+				var anyo = prompt ("¿Año de nacimiento?")
+
+				if ((n-anyo) >= 18) {
 					alert("Eres mayor de edad, adelante");
 					} else {
 					alert ("Eres menor de edad, no puedes pasar");
