--- a/U3/U3Practica1.html
+++ b/U3/U3Practica1.html
@@ -10,6 +10,7 @@
         palabras = formulario.area.value.split(" ");
         // Ventanita a abrir
         var ventana = window.open("", "", "width=300, height=200");
+        // Var ventana = window.close(); la cierra
         var n = palabras.length - 1;
 
         // variables para palabra larga y corta
