--- a/U3/U3Practica1-2.html
+++ b/U3/U3Practica1-2.html
@@ -28,25 +28,24 @@
       // meter el string en un array
       palabras = formulario.area.value.split(" ");
       // Ventanita a abrir
-      var ventana = window.open("", "_blank", "toolbar=yes,scrollbars=yes,resizable=yes,width=300, height=200");
+      var ventana = window.open("", "", "width=300, height=200");
 
       for(var i=0; i<palabras.length; i++) {
         var des = palabras[i].split("");
         if (des[0]==abc[r]){
           c = c + 1;
         } else {
-          bb[e] = abc[i];
+          bb[e] = palabras[i];
           e = e + 1;
-
         }
       }
 
       if(e==0) {
         ventana.document.write ("¡Enhorabuena! Tu puntuación es: " + c);
       } else {
-        ventana.document.write ("Has tenido algunos errores: ");
+        ventana.document.write ("Has tenido algunos errores: </br>");
         for(var i=0; i<bb.length; i++) {
-          ventana.document.write(bb[i] + " - ");
+          ventana.document.write(bb[i] + " </br> ");
         }
       }
     }
