--- a/U3/U3Practica1.html
+++ b/U3/U3Practica1.html
@@ -35,7 +35,7 @@
           }
 
           // Ordenar palabras alfabéticamente. Con .join("Separador") se cambia lo que las separa.
-          var orden = palabras.sort();
+          var orden = palabras.sort();  // .sort() cambia el orden de palabras, no es necesario almacenarlo en otra variable.
 
         ventana.document.write('<meta charset="utf-8">');
         ventana.document.write('<b>Primera palabra: </b>' + palabras[0] + "<br>");
