--- a/U4/U4H1Ej2.html
+++ b/U4/U4H1Ej2.html
@@ -4,12 +4,21 @@
     <title>Ej Hola mundo hecho con nodos DOM</title>
   </head>
   <body>
-    <h1> Esto es un título</h1>
+    <h1>Esto es un título</h1>
     <p>Esto es un ejemplo </p>
-    <div> Esto es un div</div>
+    <div>Esto es un div</div>
 
     <script type="text/javascript">
-      
+      var doch = document.body.childNodes[1];
+      doch.innerText="Cambio el h1";
+
+      var docp = document.body.childNodes[3];
+      docp.innerText="Cambio el p";
+
+      var docdiv = document.body.childNodes[5];
+      docdiv.innerText="Cambio el div";
+
+
     </script>
   </body>
 </html>
