--- a/U4/U4Ej5.html
+++ b/U4/U4Ej5.html
@@ -29,7 +29,7 @@
     var pes = document.getElementsByTagName("p");
     var tercero = pes[2].getElementsByTagName("a");
     document.write ("Número de enlaces: " + enlaces.length);
-    document.write ("<br>El último enlace es: " + enlaces[5].href);
+    document.write ("<br>El penúltimo enlace es: " + enlaces[5].href);
     document.write ("<br>Número de enlaces que enlazan a http://prueba: " + cont);
     document.write ("<br>Número de enlaces en el último párrafo: " + tercero.length);
 
