--- a/U4/U4Ej6.html
+++ b/U4/U4Ej6.html
@@ -36,7 +36,7 @@
 
     var pes = document.getElementsByTagName("p");
     function ocultar() {
-      pes[0].setAttribute("Class", "oculto");
+      pes[0].setAttribute("class", "oculto");
       pes[1].setAttribute("class", "visible");
     }
 
