--- a/U4/U4Ej3.html
+++ b/U4/U4Ej3.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <meta charset="utf-8">
+    <title>Ej3</title>
+  </head>
   <body>
     <div id="contiene_ps">
       <p>?</p>
