--- a/U5/U5Ej3.html
+++ b/U5/U5Ej3.html
@@ -1,14 +1,13 @@
-<!-- 3.	Crea una web que contenga elementos p, a, div, h1, h2 y h3 con texto
-e incluye una función de manejo de eventos que cambie el color del elemento sobre el que se hace doble click.
-Realiza este ejercicio de la manera más eficiente (escribiendo la menor cantidad de código) que conozcas. -->
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>U5 Ejercicio 3</title>
     <script type="text/javascript">
-      
+      ondblclick = function() {
+        var cosa = document.body.querySelector(":hover");
+        cosa.style.color="red";
+      }
     </script>
   </head>
   <body>
@@ -18,6 +17,5 @@ Realiza este ejercicio de la manera más eficiente (escribiendo la menor cantida
     <h1>h1 gigante</h1>
     <h2>Hermoso h2</h2>
     <h3>Increible h3</h3>
-
   </body>
 </html>
